# darklens

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  README_PT.md  README_RU.md  README_ZH.md  SECURITY.md  app.py  config.example.yaml  config.py  input_handler.py  monitor.py  overlay.py  pyproject.toml  requirements.txt  utils.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
scripts/: create_history.sh
tests/: test_monitor.py
